# JobPilot

./: .env.example  .gitignore  .start  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  project.md  project_v2.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 481b01b23f23_create_generated_artifacts_table.py  5d21bc9bb45b_create_workflow_layer_tables.py  63fb9442ddd4_create_core_business_tables.py  (+6 more)
backend/app/: __init__.py  main.py
backend/scripts/: cleanup_test_data.py
backend/tests/: conftest.py  test_add_knowledge_text_tool.py  test_agent_workflow_tables.py  test_application_transition.py  test_artifact_feedback.py  test_assistant_api.py  test_assistant_knowledge_context.py  test_assistant_memory.py  test_assistant_mock_interview.py  test_assistant_stream.py  test_auth_api.py  test_context_hint.py  test_conversations_agent_runs_api.py  test_conversations_api.py  test_cover_letter_generation.py  test_cover_letter_tool.py  test_create_application_tool.py  test_create_job_tool.py  test_create_resume_tool.py  test_draft_job_tool.py  test_draft_resume_tool.py  test_embedding_client.py  test_eval_runner.py  test_generated_artifacts.py  test_interview_prep_generation.py  test_interview_prep_tool.py  test_job_draft.py  test_job_parsing.py  test_job_url_fetch.py  test_knowledge_api.py  test_knowledge_indexing.py  test_list_generated_artifacts_tool.py  test_match_analysis.py  test_match_analysis_tool.py  test_parse_job_posting_tool.py  test_parse_resume_tool.py  test_react_loop.py  test_read_job_posting_tool.py  test_read_resume_tool.py  test_read_tools.py  (+12 more)
(+187 files in other folders)
