[project]
name = "jobpilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain-core>=1,<2",
    "langgraph>=1,<2",
    "pdfplumber>=0.11.0",
    "pgvector>=0.4.0",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.2",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "respx>=0.22.0",
    "sqlalchemy>=2.0.49",
    "trafilatura>=2.0.0",
    "uvicorn>=0.45.0",
]

[tool.pytest.ini_options]
addopts = ["-p", "no:cacheprovider"]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
